--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p>The walrus danced! through the trees! in the light! of the moon!</p>
     <script src='src/script/main.js'></script>
 </body>
 </html>
